Version 16.105 - 15 June 2015

- really fix urpmi media when installing from USB (mga#5690)

Version 16.104 - 13 June 2015

- diskdrake:
  o prevent errors when telling kernel to reread partition table

Version 16.103 - 4 June 2015

- partitioning wizard:
  o only use current disk when auto partitioning, wiping disk,
    using free space (mga#16055)

Version 16.102 - 29 May 2015

- diskdrake:
  o ignore special 'Packard_Bell' and 'Push_Button_Reset' partitions (mga#15999)
  o run udevadm settle after actions that trigger device reload (mga#15999)

Version 16.101 - 25 May 2015

- do not die if network cannot be started for updates (mga#8819),
  just log the faillure and offer to either retry or abort
- do not offer to add a CD-ROM as supplement media (mga#13671)
- fix urpmi media when installing from USB (mga#5690)
- locale setting
  o fix reading back IM config (mga#15761)
- partitioning:
  o set pt_type according to fs_type before flag cases (mga#16029)

Version 16.100 - 20 May 2015

- add online media at installation end (mga#8819)

Version 16.99 - 20 May 2015

- bootloader:
  o do not detect grub2 on UEFI when there's no bootloader
  o fix default grub2 kernel parameters (mga#15984)
- partitioning:
  o display cosmetics when reading back GPT partitions
  o fix mnt point for FAT partitions on GTP (mga#15987)
  o set the proper GUID for FAT partitions on GPT
- don't try to install non existant scim-googlepinyin (mga#6681)

Version 16.97 - 18 May 2015

(just to be sure draklive-install fix for mga15257 doesn't break anything)

Version 16.96 - 17 May 2015

- partitioning:
  o fix regression refusing FAT for ESP (mga#15962)

Version 16.95 - 14 May 2015

- better dialog title (mga#9648)
- partitioning:
  o fix a crash after "insufficient space" error (mga#15919)

Version 16.93 - 9 May 2015

- bootloader:
  o do use vga value for grub2
  o fix setting default grub2 entry

Version 16.92 - 9 May 2015

- bootloader:
  o backup grub2 files before configuring