@@ -1,3 +1,5 @@
+- switch from evdev+synaptics to libinput driver
+
 Version 16.105 - 15 June 2015
 
 - really fix urpmi media when installing from USB (mga#5690)
